--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:55147",
-      "sslPort": 44337
+      "applicationUrl": "http://localhost:11723",
+      "sslPort": 0
     }
   },
   "profiles": {
-    "New_folder": {
+    "mywebapp": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7138;http://localhost:5010",
+      "applicationUrl": "http://localhost:5258",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
